--- a/client/public/css/zodiac.css
+++ b/client/public/css/zodiac.css
@@ -1,3 +1,41 @@
+.top-header {
+  color: #797979;
+  font-family: "Arial";
+  font-size: 60px;
+  margin-top: 0px;
+  padding-top: 17px;
+  padding-bottom: 17px;
+  padding-left: 30px;
+}
+
+img {
+  height: 50px;
+}
+
+.sign-indicator {
+  font-family: 'Arial';
+  font-weight: bold;
+  color: #797979;
+}
+
 .zodiac-header {
-  color: blue;
+  color: #dd7000;
+  font-family: 'Arial';
+  font-weight: bold;
+}
+
+.spanOne {
+  color: #797979;
+}
+
+.spanTwo {
+  color: #797979;
+}
+
+.spanThree {
+  color: #797979;
+}
+
+.spanFour {
+  color: #797979;
 }
